Added more outline to HTML

--- a/index.html
+++ b/index.html
@@ -39,10 +39,27 @@
         </div>
     </section>  
 <!--About Me Here-->
-
+    <article>
+        <h2>About Me</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea, illo perferendis repudiandae praesentium quidem rem fugit eos nemo quae beatae maxime, suscipit totam, rerum deleniti recusandae molestias molestiae. Eveniet, nobis?</p>
+    </article>
 <!--My Work Here-->
+    <article>
+        <h2>My Work</h2>
+            <p>Insert Work Here TM</p>
 
+    </article>
 <!--Contact Info Here-->
+
+    <article>
+        <h2>Contact Me</h2>
+            <p>Github, Email, Cell</p>
+    </article>
+
+    <footer>
+        <h3>Place your footer here when finished</h3>
+    </footer>
+
 </body>
        
 </html>
