HTML basic outline completed

--- a/index.html
+++ b/index.html
@@ -38,23 +38,24 @@
             <h2> Full Stack Bootcamp</h2>
         </div>
     </section>  
+
 <!--About Me Here-->
-    <article>
+    <section class="about-me">
         <h2>About Me</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea, illo perferendis repudiandae praesentium quidem rem fugit eos nemo quae beatae maxime, suscipit totam, rerum deleniti recusandae molestias molestiae. Eveniet, nobis?</p>
-    </article>
+    </section>
+
 <!--My Work Here-->
-    <article>
+    <section class="about-me">
         <h2>My Work</h2>
             <p>Insert Work Here TM</p>
+    </section>
 
-    </article>
-<!--Contact Info Here-->
-
-    <article>
+    <!--Contact Info Here-->
+    <section class="contact-me">
         <h2>Contact Me</h2>
-            <p>Github, Email, Cell</p>
-    </article>
+            <p>Github: SnowSlurpie, Email: alex.j.running@gmail.com , Cell: 651-233-9444</p>
+    </section>
 
     <footer>
         <h3>Place your footer here when finished</h3>
