Updated contact section. possibly final version?

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <title>Alex Running | Portfolio</title>
 </head>
 
@@ -52,13 +53,23 @@
     </section>
 
     <!--Contact Info Here-->
-    <section class="contact-me">
-        <h2>Contact Me</h2>
-            <p>Github: SnowSlurpie, Email: alex.j.running@gmail.com , Cell: 651-233-9444</p>
-    </section>
 
-    <footer>
-        <h3>Place your footer here when finished</h3>
+
+    <footer class="contact-me">
+        <h2>Contact Me</h2>
+            <div>
+                <i class="fa-solid fa-envelope"></i>
+                <a href="mailto:alex.j.running@gmail.com">Email</a>
+            </div>
+            <div>
+                <i class="fa-brands fa-github-alt"></i>
+                <a href="https://github.com/SnowSlurpie">My Github</a>
+            </div>
+            <div>
+                <i class="fa-solid fa-briefcase"></i>
+                <a href="https://www.linkedin.com/in/alex-running-2a2a53188">My Linkedin</a>
+            </div>
+            
     </footer>
 
 </body>
