--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#about-me">About Me</a>
+                    <a href="#about">About Me</a>
                 </li>
                 <li>
-                    <a href="#my-work">My Work</a>
+                    <a href="#work">My Work</a>
                 </li>
                 <li>
-                    <a href="#contact-me">Contact Me</a>
+                    <a href="#contact">Contact Me</a>
                 </li>
             </ul>
         </nav>
@@ -41,13 +41,13 @@
     </section>  
 
 <!--About Me Here-->
-    <section class="about-me">
+    <section class="about">
         <h2>About Me</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea, illo perferendis repudiandae praesentium quidem rem fugit eos nemo quae beatae maxime, suscipit totam, rerum deleniti recusandae molestias molestiae. Eveniet, nobis?</p>
     </section>
 
 <!--My Work Here-->
-    <section class="about-me">
+    <section class="about">
         <h2>My Work</h2>
             <p>Insert Work Here TM</p>
     </section>
@@ -55,7 +55,7 @@
     <!--Contact Info Here-->
 
 
-    <footer class="contact-me">
+    <footer class="contact" id="contact">
         <h2>Contact Me</h2>
             <div>
                 <i class="fa-solid fa-envelope"></i>
