--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 
     <footer class="contact" id="contact">
-        <h2>Contact Me</h2>
+        <h2 class="title">Contact Me</h2>
             <div>
                 <i class="fa-solid fa-envelope"></i>
                 <a href="mailto:alex.j.running@gmail.com">Email</a>
