added style to hero header

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <!-- Hero Here-->
     <section class="hero">
         <div>
-            <h2> Full Stack Bootcamp</h2>
+            <h2><span>Full Stack Bootcamp</span></h2>
         </div>
     </section>  
 
