Updated About Me styles and CSS

--- a/index.html
+++ b/index.html
@@ -42,13 +42,15 @@
     </section>  
 
 <!--About Me Here-->
-    <section class="about">
+    <section class="about" id="about">
         <h2>About Me</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea, illo perferendis repudiandae praesentium quidem rem fugit eos nemo quae beatae maxime, suscipit totam, rerum deleniti recusandae molestias molestiae. Eveniet, nobis?</p>
+            <div class="me">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea, illo perferendis repudiandae praesentium quidem rem fugit eos nemo quae beatae maxime, suscipit totam, rerum deleniti recusandae molestias molestiae. Eveniet, nobis?</p>
+        </div>
     </section>
 
 <!--My Work Here-->
-    <section class="about">
+    <section class="work" id="work">
         <h2>My Work</h2>
             <p>Insert Work Here TM</p>
     </section>
