--- a/index.html
+++ b/index.html
@@ -51,8 +51,51 @@
 
 <!--My Work Here-->
     <section class="work" id="work">
-        <h2>My Work</h2>
-            <p>Insert Work Here TM</p>
+        <div class="title"><h2>My Work</h2></div>
+        <div class="image grid">
+            
+            <a 
+                href="https://github.com/SnowSlurpie/run_buddy"
+                target="_blank"
+                id="run-buddy"
+                class="img-grid-col-2 img-grid-row-2">
+                <div class="project-label">
+                    <h3>Run Buddy</h3>
+                    <p>HTML/CSS</p></a>
+                </div>
+            
+                <a href="https://www.youtube.com/watch?v=S2ihdoT2noo"
+                target="_blank"
+                class="soon">
+
+                <div class="project-label">
+                    <h3>Project Coming Soon!</h3>
+                    <p>HTML,CSS,JavaScript</p>
+                </div></a>
+                <a href="https://www.youtube.com/watch?v=S2ihdoT2noo"
+                target="_blank"
+                class="soon">
+
+                <div class="project-label">
+                    <h3>Project Coming Soon!</h3>
+                    <p>HTML,CSS,JavaScript</p>
+                </div></a>
+                <a href="https://www.youtube.com/watch?v=S2ihdoT2noo"
+                target="_blank"
+                class="soon">
+
+                <div class="project-label">
+                    <h3>Project Coming Soon!</h3>
+                    <p>HTML,CSS,JavaScript</p>
+                </div></a>
+                <a href="https://www.youtube.com/watch?v=S2ihdoT2noo"
+                target="_blank"
+                class="soon">
+
+                <div class="project-label">
+                    <h3>Project Coming Soon!</h3>
+                    <p>HTML,CSS,JavaScript</p>
+                </div></a>
     </section>
 
     <!--Contact Info Here-->
