--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../alex-portfolio/assets/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+        <link rel="stylesheet" href="../alex-portfolio/assets/style.css">
     <title>Alex Running | Portfolio</title>
     </head>
 
@@ -110,18 +110,18 @@
 
     <!--Contact Info Here-->
 
-        <footer class="contact" id="contact">
-            <h2 class="title" id="contact">Contact Me</h2>
+        <footer class="contact">
+            <h2 class="title">Contact Me</h2>
                 <div class="info">
-                    <i class="fa-solid fa-envelope"></i>
+                    <i class="fa-solid fa-envelope fa-lg"></i>
                     <a href="mailto:alex.j.running@gmail.com">Email</a>
                 </div>
                 <div class="info">
-                    <i class="fa-brands fa-github-alt"></i>
+                    <i class="fa-brands fa-github-alt fa-lg"></i>
                     <a href="https://github.com/SnowSlurpie">My Github</a>
                 </div>
                 <div class="info">
-                    <i class="fa-solid fa-briefcase"></i>
+                    <i class="fa-solid fa-briefcase fa-lg"></i>
                     <a href="https://www.linkedin.com/in/alex-running-2a2a53188">My Linkedin</a>
                 </div>
             
