--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </section>  
 
 <!--About Me Here-->
-        <section class="about" id="about">
+        <section class="about" >
             <div class="title">
             <h2>About Me</h2>
             </div>
@@ -52,7 +52,7 @@
         </section>
 
 <!--My Work Here-->
-        <section class="work" id="work">
+        <section class="work">
             <div class="title"><h2>My Work</h2></div>
             <div class="img-grid">
                 <a 
