--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
                     </div>
                 </a>
                 <a 
-                    href="https://www.youtube.com/watch?v=S2ihdoT2noo"
+                    href="https://github.com/aubree-alexander/the-nasa-spirit"
                     target="_blank"
-                    class="soon">
+                    id="spirit">
 
                     <div class="project-label">
-                        <h3>Project Coming Soon!</h3>
-                        <p>HTML,CSS,JavaScript</p>
+                        <h3>The NASA Spirit</h3>
+                        <p>API Project</p>
                     </div>
                 </a>
                 <a href="https://www.youtube.com/watch?v=S2ihdoT2noo"
