--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
             <div class="title"><h2>My Work</h2></div>
             <div class="img-grid">
                 <a 
-                    href="https://github.com/SnowSlurpie/run_buddy"
+                    href="https://github.com/SnowSlurpie/woof-call"
                     target="_blank"
-                    id="run-buddy"
+                    id="woof-call"
                     class="img-grid-col-2 img-grid-row-2"
                     >
                     <div class="project-label">
-                     <h3>Run Buddy</h3>
-                        <p>HTML/CSS</p>
+                     <h3>Pawnder</h3>
+                        <p>Full Stack Project</p>
                     </div>
                 </a>
                 <a 
@@ -76,16 +76,16 @@
                         <p>API Project</p>
                     </div>
                 </a>
-                <a href="https://www.youtube.com/watch?v=S2ihdoT2noo"
-                    target="_blank"
-                    class="soon"
-                    alt="sign with coming soon printed on its face">
-
-                    <div class="project-label">
-                        <h3>Project Coming Soon!</h3>
-                        <p>HTML,CSS,JavaScript</p>
-                    </div>
-                </a>
+                <a 
+                href="https://github.com/SnowSlurpie/run_buddy"
+                target="_blank"
+                id="run-buddy"
+                >
+                <div class="project-label">
+                 <h3>Run Buddy</h3>
+                    <p>HTML/CSS</p>
+                </div>
+            </a>
                 <a href="https://www.youtube.com/watch?v=S2ihdoT2noo"
                     target="_blank"
                     class="soon"
